tests/invalid/assignment_type_error.alu
function () do
begin
int x = 5;
bool y = true;
x = y;
end
test

